--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -1,38 +1,70 @@
+@import '../style/mixins.css';
+
 .Button {
 
+  @apply: --font-roboto;
   all: initial;
   display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all .2s;
+  border-radius: 1px;
+
+  &:hover {
+    box-shadow: inset 0px 0px 200px 0px rgba(0, 0, 0, .2);
+  }
+  &:active {
+    box-shadow: inset 0px 0px 200px 0px rgba(0, 0, 0, .5);
+  }
+
+  &__content {
+    display: inline-block;
+    vertical-align: middle;
+  }
 
   &__icon {
     display: inline-block;
+    vertical-align: middle;
+    height: 100%;
   }
 
   &--size-small &__icon {
-    margin-left: 10px;
+    margin-right: 10px;
   }
 
   &--size-medium &__icon {
-    margin-left: 15px;
+    margin-right: 15px;
   }
 
+  &--size-large {
+    height: 30px;
+    padding: 12px 20px;
+    font-size: 14px;
+    font-size: 14px;
+  }
+  &--size-large &__content {
+    line-height: 30px;
+  }
   &--size-large &__icon {
-    margin-left: 20px;
+    margin-right: 15px;
   }
 
   &--theme-blue {
     background: $colors-blue;
-    color: $colors-white;
+    color: $colors-light;
   }
 
   &--theme-dark {
     background: $colors-dark;
-    color: $colors-white;
+    color: $colors-light;
   }
 
   &--theme-red {
     background: $colors-red;
-    color: $colors-white;
+    color: $colors-light;
   }
 
 }
-
