--- a/site/src/app.css
+++ b/site/src/app.css
@@ -1,7 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700&subset=latin,cyrillic);
+@import 'normalize.css';
 
-.App {
+html, body {
+  height: 100%;
+}
+
+body {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row nowrap;
+  max-height: 100%;
+  max-width: 100%;
   font-family: Roboto;
   font-weight: 300;
   font-size: 14px;
+}
+
+.App {
+  display: flex;
+  flex: 1;
+}
+
+:global #root {
+  display: flex;
+  flex: 1;
 }
