--- a/site/src/components/PropTypesTable/index.css
+++ b/site/src/components/PropTypesTable/index.css
@@ -1,5 +1,9 @@
 :global .PropTypeDescription {
 
+  table {
+    font-size: 14px;
+  }
+
   table tr:nth-child(2n) {
     background-color: #fff;
   }
@@ -23,13 +27,11 @@
 
   table td {
     color: #266d90;
-    font-size: 95%;
   }
 
   table td + td {
     color: #bf2a5c;
     font-family: Menlo,Monaco, Consolas, "Courier New", monospace;
-    font-size: 90%;
   }
 
   table td + td + td {
@@ -39,7 +41,6 @@
   table td + td + td + td {
     color: rgba(51, 51, 51, 0.9);
     font-family: "Roboto", sans-serif;
-    font-size: 95%;
     min-width: 250px;
   }
 
