--- a/site/src/pages/Layout/index.css
+++ b/site/src/pages/Layout/index.css
@@ -1,17 +1,38 @@
 .Layout {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
   &__content {
-
+    flex: 1;
+    overflow-y: auto;
   }
-
-  &_route_components {
-    padding-left: 100px;
+  &__left {
+    min-width: 200px;
+    display: flex;
+  }
+  &__right {
+    flex: 1 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 .Menu {
+  display: flex;
+  padding: 0 15px;
+  background: #fff;
+  box-shadow: 0px 1px 0px 0px rgba(0,0,0,.1);
+  position: relative;
+  z-index: 1;
   &__item {
+    color: $colors-dark;
+    padding: 15px 10px 13px;
+    border-bottom: 2px solid transparent;
+    text-decoration: none;
+    font-weight: 400;
     &.is-active {
-
+      border-color: $colors-blue;
+      color: $colors-blue;
     }
   }
 }
