--- a/site/src/app.css
+++ b/site/src/app.css
@@ -12,7 +12,7 @@ body {
   max-height: 100%;
   max-width: 100%;
   font-family: Roboto;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 14px;
 }
 
@@ -24,4 +24,24 @@ body {
 :global #root {
   display: flex;
   flex: 1;
+}
+
+:global a {
+  &, &:visited, &:active {
+    text-decoration: none;
+    color: $colors-blue;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 1em;
+  margin-bottom: 16px;
+  font-weight: 300;
+  line-height: 1.4;
+  color: rgba(0, 0, 0, 0.87);
 }
