--- a/site/src/components/Breadcrumbs/index.css
+++ b/site/src/components/Breadcrumbs/index.css
@@ -1,12 +1,20 @@
 .Breadcrumbs {
 
-  &__item {
-    &.is-active {
+  $main-color: #888;
 
-    }
+  padding: 15px 15px;
+  background: #fff;
+  box-shadow: 0px 1px 0px 0px rgba(0,0,0,.07);
+  color: $main-color;
+  font-size: 12px;
+
+  &__item {
+    @mixin link $main-color, $colors-dark;
   }
 
   &__divider {
+    display: inline-block;
+    margin: 0 5px;
 
   }
 
