--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -13,6 +13,10 @@
   transition: all .2s;
   border-radius: 1px;
 
+  &, &:active, &:hover, &:visited {
+    color: $colors-light;
+  }
+
   &:hover {
     box-shadow: inset 0px 0px 200px 0px rgba(0, 0, 0, .2);
   }
@@ -41,7 +45,7 @@
 
   &--size-large {
     height: 30px;
-    padding: 12px 20px;
+    padding: 10px 20px;
     font-size: 14px;
     font-size: 14px;
   }
@@ -54,17 +58,14 @@
 
   &--theme-blue {
     background: $colors-blue;
-    color: $colors-light;
   }
 
   &--theme-dark {
     background: $colors-dark;
-    color: $colors-light;
   }
 
   &--theme-red {
     background: $colors-red;
-    color: $colors-light;
   }
 
 }
