--- a/site/src/components/Playground/index.css
+++ b/site/src/components/Playground/index.css
@@ -21,6 +21,8 @@
     display: inline-block;
     padding: 15px 15px 13px;
     border-bottom: 2px solid transparent;
+    position: relative;
+    top: 1px;
     &.is-active {
       color: $colors-blue;
       border-color: $colors-blue;
