--- a/site/src/pages/Layout/index.css
+++ b/site/src/pages/Layout/index.css
@@ -30,6 +30,7 @@
     border-bottom: 2px solid transparent;
     text-decoration: none;
     font-weight: 400;
+    margin-bottom: -1px;
     &.is-active {
       border-color: $colors-blue;
       color: $colors-blue;
