--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -1,71 +1,182 @@
-@import '../style/mixins.css';
-
-.Button {
-
-  @apply: --font-roboto;
-  all: initial;
-  display: inline-block;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  cursor: pointer;
-  transition: all .2s;
-  border-radius: 1px;
-
-  &, &:active, &:hover, &:visited {
-    color: $colors-light;
+@keyframes animateDot {
+  20% {
+    transform: scale(1)
   }
-
-  &:hover {
-    box-shadow: inset 0px 0px 200px 0px rgba(0, 0, 0, .2);
+  40% {
+    transform: scale(1) translate3d(0, 6px, 0);
   }
-  &:active {
-    box-shadow: inset 0px 0px 200px 0px rgba(0, 0, 0, .5);
+  100% {
+    transform: scale(1)  translate3d(0, 0, 0)
   }
-
-  &__content {
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  &__icon {
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-  }
-
-  &--size-small &__icon {
-    margin-right: 10px;
-  }
-
-  &--size-medium &__icon {
-    margin-right: 15px;
-  }
-
-  &--size-large {
-    height: 30px;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-size: 14px;
-  }
-  &--size-large &__content {
-    line-height: 30px;
-  }
-  &--size-large &__icon {
-    margin-right: 15px;
-  }
-
-  &--theme-blue {
-    background: $colors-blue;
-  }
-
-  &--theme-dark {
-    background: $colors-dark;
-  }
-
-  &--theme-red {
-    background: $colors-red;
-  }
-
 }
+.button {
+  font-family: 'Roboto', sans-serif;
+  overflow: hidden;
+  text-align: center;
+  transition: all .2s;
+  cursor: pointer;
+  box-sizing: border-box;
+  padding: 0 20px;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+  font-weight: 500;
+  letter-spacing: 1px;
+  outline: none;
+  &--size-medium {
+    height: 45px;
+    line-height: 45px;
+  }
+  &--size-small {
+    height: 35px;
+    line-height: 35px;
+  }
+}
+
+@define-mixin btn $name,
+$default-bg,
+$default-border,
+$default-text,
+$hover-border,
+$hover-bg,
+$active-border,
+$active-bg,
+$focus-border,
+$focus-bg,
+$focus-ounline-border,
+$loading-border,
+$loading-dot,
+$disabled-border,
+$disabled-bg,
+$disabled-text {
+  $(name) {
+  color: $default-text !important;
+  background: $default-bg;
+  border: 1px solid $default-border;
+    &:focus:not(:active):not(:hover) {
+      background: $focus-bg !important;
+      border-color: $focus-border !important;
+      &::before {
+        content: '';
+        position: absolute;
+        top: -3px;
+        bottom: -3px;
+        left: -3px;
+        right: -3px;
+        border: 1px solid $focus-ounline-border;
+      }
+    }
+    &:hover:not(:active) {
+      background: $hover-bg !important;
+      border-color: $hover-border !important;
+    }
+    &:active {
+      background: $active-bg;
+      border-color: $active-border !important;
+    }
+    &-disabled {
+      color: $disabled-text !important;
+      pointer-events: none;
+      border-color: $disabled-border;
+      background: $disabled-bg;
+    }
+    &-loading {
+      &-wrapper {
+        color: rgba(0, 0, 0, 0) !important;
+      }
+      position: absolute;
+      width: 26px;
+      height: 12px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      margin: auto;
+
+      &-dot {
+        height: 6px;
+        width: 6px;
+        border-radius: 50%;
+        background: $loading-dot;
+        float: left;
+        transition: transform .6s ease-out;
+        transform: translate3d(0, 0, 0);
+
+        animation: animateDot .6s ease-out;
+        animation-fill-mode: forwards;
+        animation-iteration-count: infinite;
+      }
+
+      &-dot:nth-child(2){
+        margin: 0 4px;
+      }
+
+      &-dot:nth-child(1){
+        animation-delay: 0s;
+      }
+
+      &-dot:nth-child(2){
+        animation-delay: .08s;
+      }
+
+      &-dot:nth-child(3){
+        animation-delay: .16s;
+      }
+    }
+  }
+}
+
+@mixin btn .Button--theme-blue,
+  #315efb,
+  #315efb,
+  #fff,
+  #3059DD,
+  #3059DD,
+  #2A4FC5,
+  #2A4FC5,
+  #1660e0,
+  #1660e0,
+  #315efb,
+  #315efb,
+  #fff,
+  #315efb,
+  #315efb,
+  rgba(255, 255, 255, .4)
+;
+
+@mixin btn .Button--theme-white,
+  #fff,
+  #ccc,
+  #262626,
+  #262626,
+  #fff,
+  #ccc,
+  #eee,
+  #315efb,
+  #fff,
+  transparent,
+  #ccc,
+  #315efb,
+  #eee,
+  #eee,
+  rgba(38, 38, 38, .4)
+;
+
+@mixin btn .Button--theme-light-blue,
+  #eaefff,
+  #eaefff,
+  #315efb,
+  transparent,
+  rgba(49, 94, 251, .2),
+  transparent,
+  rgba(49, 94, 251, .3),
+  #649dff,
+  #eaefff,
+  transparent,
+  #eaefff,
+  #315efb,
+  #eaefff,
+  #eaefff,
+  rgba(49, 94, 251, .4)
+;
