Не забываем про disabled

--- a/src/Toggle/Toggle.css
+++ b/src/Toggle/Toggle.css
@@ -69,7 +69,9 @@
 
   &.is-disabled {
     opacity: .5;
-    pointer-events: none;
+    * {
+      pointer-events: none !important;
+    }
   }
 
 }
