--- a/src/icons/profiles/__doc__/index.css
+++ b/src/icons/profiles/__doc__/index.css
@@ -2,3 +2,12 @@
   display: inline-block;
   margin: 10px;
 }
+
+.CircleIcon {
+  display: inline-block;
+  margin: 10px;
+  border-radius: 50%;
+  padding: 4px;
+  background-color: #444;
+  font-size: 0;
+}
