--- a/site/src/app.css
+++ b/site/src/app.css
@@ -15,7 +15,8 @@ body {
   flex-flow: row nowrap;
   max-height: 100%;
   max-width: 100%;
-  font-family: Roboto;
+  font-family: -apple-system, system-ui, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  // font-family: 'Comic Sans MS';
   font-weight: 400;
   font-size: 14px;
   overflow: hidden;
