--- a/site/src/components/MarkdownElement/index.css
+++ b/site/src/components/MarkdownElement/index.css
@@ -8,7 +8,7 @@
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   color: #333;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-size: 14px;
   line-height: 1.6;
   word-wrap: break-word;
