--- a/site/src/components/PropTypesTable/index.css
+++ b/site/src/components/PropTypesTable/index.css
@@ -41,7 +41,7 @@
 
   table td + td + td + td {
     color: rgba(51, 51, 51, 0.9);
-    font-family: "Roboto", sans-serif;
+    font-family: inherit;
     min-width: 250px;
   }
 
