Опция базового шрифта

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -16,7 +16,7 @@ body {
   max-height: 100%;
   max-width: 100%;
   font-family: -apple-system, system-ui, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  // font-family: 'Comic Sans MS';
+  // font-family: 'Roboto';
   font-weight: 400;
   font-size: 14px;
   overflow: hidden;
