--- a/site/src/components/MarkdownElement/index.css
+++ b/site/src/components/MarkdownElement/index.css
@@ -6,11 +6,12 @@
 
 :global .markdown-body {
   -webkit-text-size-adjust: 100%;
+  margin: 20px 0;
   text-size-adjust: 100%;
-  color: #333;
+  color: $colors-carbone;
   font-family: inherit;
   font-size: 14px;
-  line-height: 1.6;
+  line-height: 1.79;
   word-wrap: break-word;
 }
 
@@ -208,14 +209,6 @@
   content: '\f05c';
 }
 
-:global .markdown-body>*:first-child {
-  margin-top: 0 !important;
-}
-
-:global .markdown-body>*:last-child {
-  margin-bottom: 0 !important;
-}
-
 :global .markdown-body a:not([href]) {
   color: inherit;
   text-decoration: none;
@@ -239,9 +232,7 @@
 :global .markdown-body h6 {
   margin-top: 1em;
   margin-bottom: 16px;
-  font-weight: 300;
   line-height: 1.4;
-  color: rgba(0, 0, 0, 0.87);
 }
 
 :global .markdown-body h1 .octicon-link,
@@ -405,25 +396,36 @@
   overflow: auto;
   word-break: normal;
   word-break: keep-all;
-}
 
-:global .markdown-body table th {
-  font-weight: 500;
-}
+  th, td {
+    padding: 12px 16px 11px 0;
+    font-weight: normal;
+    border: solid $colors-argentumLight;
+    border-width: 1px 0;
 
-:global .markdown-body table th,
-:global .markdown-body table td {
-  padding: 6px 13px;
-  border: 1px solid #ddd;
-}
+    &:first-child {
+      border-width: 1px 0 1px 1px;
+      padding-left: 28px;
+    }
 
-:global .markdown-body table tr {
-  background-color: #fff;
-  border-top: 1px solid #ccc;
-}
+    &:last-child {
+      border-width: 1px 1px 1px 0;
+    }
+  }
 
-:global .markdown-body table tr:nth-child(2n) {
-  background-color: #f8f8f8;
+  thead th {
+    color: $colors-carbone;
+    background: rgba(238, 242, 244, 0.5);
+  }
+
+  tbody td {
+    font-weight: 500;
+
+    &:last-child {
+      color: $colors-cloudGray;
+      font-weight: normal;
+    }
+  }
 }
 
 :global .markdown-body img {
@@ -438,7 +440,7 @@
   padding-bottom: 0.2em;
   margin: 0;
   font-size: 85%;
-  background-color: rgba(0,0,0,0.04);
+  background: rgba(238, 242, 244, .5);
   border-radius: 3px;
 }
 
@@ -468,7 +470,7 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  background-color: #f7f7f7;
+  background: rgba(238, 242, 244, .5);
   border-radius: 3px;
 }
 
@@ -623,17 +625,6 @@
   border-bottom-color: #bbb;
   border-radius: 3px;
   box-shadow: inset 0 -1px 0 #bbb;
-}
-
-:global .markdown-body:before {
-  display: table;
-  content: "";
-}
-
-:global .markdown-body:after {
-  display: table;
-  clear: both;
-  content: "";
 }
 
 :global .markdown-body .task-list-item {
