Косметические правки верстки, правки компонента OnOutsideClick, правки ресайзинга аватарок, правки формирования размеров галочек для чекбокса. Update eslint

--- a/site/src/components/Playground/index.css
+++ b/site/src/components/Playground/index.css
@@ -24,6 +24,7 @@
     padding: 16px 6px 14px;
     border-bottom: 2px solid transparent;
     position: relative;
+    margin-bottom: -1px;
 
     & + & {
       margin-left: 11px;
