--- a/site/src/components/PropTypesTable/index.css
+++ b/site/src/components/PropTypesTable/index.css
@@ -1,4 +1,4 @@
-:global .PropTypeDescription {
+:global .propTypeDescription {
 
   table {
     font-size: 14px;
@@ -9,40 +9,23 @@
   }
 
   table td, table th {
-    border-top: 1px solid rgba(0, 0, 0, 0.06);
-    border-left: 0 none;
-    border-right: 0 none;
-    display: table-cell;
     vertical-align: top;
     font-size: 14px;
+    min-width: 20%;
   }
 
   table th {
-    border-bottom: 2px solid rgba(0, 0, 0, 0.06);
-    border-top: 0 none;
-    color: #888;
-    display: table-cell;
     font-weight: normal;
-    text-align: left;
-  }
-
-  table td {
-    color: #266d90;
+    white-space: nowrap;
   }
 
   table td + td {
-    color: #bf2a5c;
-    font-family: Menlo,Monaco, Consolas, "Courier New", monospace;
-  }
-
-  table td + td + td {
-    color: #666;
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   }
 
   table td + td + td + td {
     color: rgba(51, 51, 51, 0.9);
     font-family: inherit;
-    min-width: 250px;
   }
 
 }
