--- a/src/icons/profiles/__doc__/index.css
+++ b/src/icons/profiles/__doc__/index.css
@@ -7,7 +7,9 @@
   display: inline-block;
   margin: 10px;
   border-radius: 50%;
-  padding: 4px;
   background-color: #444;
   font-size: 0;
+  svg {
+    margin: 4px;
+  }
 }
